--- a/src/components/header/navi/Navi.module.scss
+++ b/src/components/header/navi/Navi.module.scss
@@ -11,7 +11,7 @@
         background-color: $blue;
         .naviListDetail {
             background-color: $white;
-            padding: 16px;
+      
             margin: 16px 0;
             border-radius: 3px;
             border-right: 8px solid $orange;
@@ -22,8 +22,17 @@
                 color: $white;
                 font-weight: 600;
                 border-right: 8px solid $yellow;
+                .anchor {
+                    color: $white;
+                }
             }
+        }
+        .anchor {
+            display: block;
+            text-decoration: none;
+            color: $black;
+            background-color: transparent;
+            padding: 16px;
         }
     }
 }
-
