--- a/src/components/mainSection/contactSection/contactTitleParts/ContactTitleParts.module.scss
+++ b/src/components/mainSection/contactSection/contactTitleParts/ContactTitleParts.module.scss
@@ -3,6 +3,7 @@
 .title {
     background-color: $blue;
     color: $white;
+    font-weight: 600;
     display: inline-block;
     padding: 16px 24px;
     border-radius: 5px;
