--- a/src/components/mainSection/contactSection/formSection/FormSection.module.scss
+++ b/src/components/mainSection/contactSection/formSection/FormSection.module.scss
@@ -5,7 +5,111 @@
     border-radius: 5px;
     border: solid 1px $blue;
     padding: 40px 56px;
+    margin: 24px 0 80px;
     .formCont {
         background-color: $cream;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 48px;
+        .inputCont {
+            background-color: $cream;
+            color: $black;
+            font-weight: 600;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            .label {
+                background-color: $cream;
+                display: flex;
+                align-items: center;
+                .labelText {
+                    font-size: 16px;
+                    margin-bottom: 1px;
+                    background-color: $cream;
+                }
+                .required {
+                    border: solid 1px $orange;
+                    border-radius: 3px;
+                    padding: 2px 8px;
+                    color: $orange;
+                    font-weight: 600;
+                    font-size: 12px;
+                    margin-left: 8px;
+                }
+            }
+            .input {
+                padding: 8px 16px;
+                border-radius: 5px;
+                border: solid 1px $blue;
+                outline: none;
+                &:focus {
+                    outline: solid 1px $blue;
+                }
+                &::placeholder {
+                    font-size: 16px;
+                }
+            }
+            .textarea {
+                padding: 8px 16px;
+                border-radius: 5px;
+                border: solid 1px $blue;
+                outline: none;
+                resize: vertical;
+                min-height: 200px;
+                &:focus {
+                    outline: solid 1px $blue;
+                }
+                &::placeholder {
+                    font-size: 16px;
+                }
+            }
+            .errorMsg {
+                color: $orange;
+                font-size: 14px;
+                background-color: $cream;
+                margin-bottom: 0;
+            }
+        }
+        .pripoliCont {
+            background-color: $cream;
+            text-align: center;
+            .pripoliClick {
+                border: none;
+                background-color: transparent;
+                text-decoration: underline;
+                color: $orange;
+                font-weight: 600;
+                font-size: 16px;
+                cursor: pointer;
+            }
+            .pripoliText {
+                background-color: $cream;
+                margin-left: 4px;
+            }
+        }
+        .submitBtn {
+            margin: 0 auto;
+            padding: 16px 32px;
+            background-color: $orange;
+            border-radius: 5px;
+            border: none;
+            outline: none;
+            color: $white;
+            font-size: 16px;
+            font-weight: 600;
+            box-shadow: 10px -8px 0 0 rgba(149, 72, 1, 1);
+            cursor: pointer;
+            transition: transform 0.4s ease-in, box-shadow 0.4s ease-in;
+            margin-bottom: 24px;
+            &:hover {
+                box-shadow: 0 0 0 $ornage-shadow; 
+                transform: translate(4px, -2px);  
+            }
+        }
     }
+}
+
+.bodyFixed {
+    overflow: hidden;
 }
