--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -23,7 +23,7 @@
                 background-color: $blue;
                 margin-top: 24px;
                 .footerListText {
-                    margin-top: 8px;
+                    margin: 8px 0 16px;
                     .footerText {
                         background-color: $blue;
                         color: $white;
