--- a/src/components/header/headertitle/HeaderTitle.module.scss
+++ b/src/components/header/headertitle/HeaderTitle.module.scss
@@ -3,7 +3,10 @@
 .headerTitleSec {
     margin: 48px 0 24px 24px;
     background-color: $blue;
-    .headerTitle {
+    .headerTitleLink {
         background-color: $blue;
+        .headerTitle {
+            background-color: $blue;
+        }
     }
 }
