--- a/src/components/mainSection/costSection/costCard/CostCard.module.scss
+++ b/src/components/mainSection/costSection/costCard/CostCard.module.scss
@@ -12,6 +12,7 @@
         padding: 24px 32px;
         gap: 32px;
         border-radius: 5px;
+        opacity: 0;
         .cardLeftCont {
             width: 35%;
             display: flex;
