--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -53,3 +53,118 @@ $ornage-shadow: #954801;
         margin-left: 48px;
     }
 }
+
+/*inview fadein*/
+.fadeIn {
+    animation: fadeIn 1.5s ease-in forwards;
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+}
+
+/*inview opacity*/
+.fadeInOpacity {
+    animation: fadeInOpacity 2s ease-in forwards;
+  }
+  
+  @keyframes fadeInOpacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+}
+
+/*inview delayFadein*/
+.delayFadeIn {
+  animation: fadeIn 1.5s ease-in forwards;
+  animation-delay: .6s;
+}
+
+@keyframes delayFadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/*inview pointSection opacity*/
+.adjustOpacity {
+    animation: adjustOpacity 2.5s ease-in forwards;
+  }
+  
+  @keyframes adjustOpacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+}
+
+/*inview scale*/
+.scale {
+    animation: inviewScale 1s ease-in forwards;
+    animation-delay: .6s;
+}
+
+@keyframes inviewScale {
+    0%   { transform: scale(1.0, 1.0) translate(0%, 0%); }
+    15%  { transform: scale(1.0, 1.1) translate(0%, 2%); }
+    30%  { transform: scale(1.0, 0.9) translate(0%, 3%); }
+    50%  { transform: scale(0.9, 1.0) translate(0%, -3%); }
+    70%  { transform: scale(1.1, 1.0) translate(0%, 2%); }
+    100% { transform: scale(1.0, 1.0) translate(0%, 0%); }
+}
+
+.rotateIn {
+    animation: rotateIn 1.5s ease-in forwards;
+    animation-delay: .6s;
+}
+  
+  @keyframes rotateIn {
+    from {
+      opacity: 0;
+      transform: rotateX(180deg);
+    }
+    to {
+      opacity: 1;
+      transform: rotateX(0deg);
+    }
+}
+
+.rotateRightIn {
+    animation: rotateRightIn 1.5s ease-in forwards;
+    animation-delay: .6s;
+  }
+  
+  @keyframes rotateRightIn {
+    from {
+      opacity: 0;
+      transform: rotateY(180deg);
+    }
+    to {
+      opacity: 1;
+      transform: rotateY(0deg);
+    }
+}
+
+/*responsive template*/
+@mixin mq ($width) {
+  @media screen and (max-width: $width) {
+      @content;
+  }
+}
