--- a/src/components/mainSection/datavoiceSection/graphCard/GraphCard.module.scss
+++ b/src/components/mainSection/datavoiceSection/graphCard/GraphCard.module.scss
@@ -4,11 +4,21 @@
     list-style: none;
     display: flex;
     justify-content: center;
+    @include mq (900px) {
+        flex-direction: column;
+        align-items: center;
+    }
     .graphList {
         display: flex;
         flex-direction: column;
         padding: 24px 32px;
         width: 48%;
+        @include mq (900px) {
+            width: 80%;
+        }
+        @include mq (500px) {
+            width: 100%;
+        }
         .graphData {
             background-color: $blue;
             border-radius: 5px;
@@ -19,11 +29,18 @@
             padding: 24px 32px;
             margin-top: 16px;
             min-height: 420px;
+            @include mq (900px) {
+                justify-content: center;
+                margin: 16px auto;
+            }
+            @include mq (500px) {
+                width: 100%;
+            }
             .graphImg {
                 background-color: $blue;
             }
             .graphLine {
-                width: 288px;
+                width: 100%;
                 height: 1px;
                 background-color: $white;
             }
