--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -7,4 +7,10 @@
     top: 0;
     left: 0;
     background-color: $blue;
+    @include mq(1350px) {
+        position: fixed;
+        width: 100vw;
+        height: auto;
+        z-index: 10;
+    }
 }
