--- a/src/components/header/headertitle/HeaderTitle.module.scss
+++ b/src/components/header/headertitle/HeaderTitle.module.scss
@@ -1,12 +1,77 @@
 @import "../../../../styles/common";
 
 .headerTitleSec {
-    margin: 48px 0 24px 24px;
+    padding: 48px 0 24px 24px;
     background-color: $blue;
+    @include mq (1350px) {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 24px 80px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        z-index: 20;
+    }
+    @include mq (540px) {
+        padding: 24px;
+    }
     .headerTitleLink {
         background-color: $blue;
         .headerTitle {
             background-color: $blue;
         }
+    }
+    .naviOpenCont {
+        display: none;
+        @include mq (1350px) {
+            display: block;
+            background-color: $blue;
+            margin-top: 4px;
+            cursor: pointer;
+            position: relative;
+            .naviOpenLine {
+                display: block;
+                width: 32px;
+                height: 3px;
+                border-radius: 5px;
+                background-color: $white;
+                margin-bottom: 8px;
+                transition: transform 0.6s ease-in, opacity 0.6s ease-in;
+            }
+            .naviCloseLine1 {
+                display: block;
+                width: 32px;
+                height: 3px;
+                border-radius: 5px;
+                background-color: $white;
+                margin-bottom: 8px;
+                transform: translateY(6px) rotate(-45deg);
+                position: absolute;
+                top: 13px;
+                right: 4px;
+                transition: transform 0.6s ease-in, opacity 0.6s ease-in;
+            }
+            .naviCloseLine2 {
+                display: block;
+                width: 32px;
+                height: 3px;
+                border-radius: 5px;
+                background-color: $white;
+                transform: translateY(-6px) rotate(45deg);
+                position: absolute;
+                top: 25px;
+                right: 4px;
+                transition: transform 0.6s ease-in, opacity 0.6s ease-in; 
+            }
+        }
+    }
+    .open {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 8px;
+        background-color: $orange;
+        border-radius: 5px;
     }
 }
