--- a/src/components/mainSection/MainSection.module.scss
+++ b/src/components/mainSection/MainSection.module.scss
@@ -3,4 +3,7 @@
 .mainSection {
     background-color: $white;
     margin-left: 20vw;
+    @include mq (1350px) {
+        margin-left: 0;
+    }
 }
