--- a/src/components/mainSection/costSection/costCard/CostCard.module.scss
+++ b/src/components/mainSection/costSection/costCard/CostCard.module.scss
@@ -5,6 +5,13 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
+    @include mq (900px) {
+        width: 80%;
+        margin: 0 auto;
+    }
+    @include mq (400px) {
+        width: 85%;
+    }
     .cardList {
         background-color: $blue;
         color: $white;
@@ -13,6 +20,15 @@
         gap: 32px;
         border-radius: 5px;
         opacity: 0;
+        @include mq (600px) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        @include mq (400px) {
+            padding: 24px 16px;
+        }
+
         .cardLeftCont {
             width: 35%;
             display: flex;
@@ -20,6 +36,9 @@
             align-items: center;
             justify-content: center;
             background-color: $blue;
+            @include mq (500px) {
+                width: 50%;
+            }
             .cardSubPoint {
                 margin-top: 16px;
                 background-color: $blue;
@@ -35,6 +54,11 @@
             width: 1px;
             height: 120px;
             background-color: $white;
+            @include mq (600px) {
+                width: 100%;
+                height: 1px;
+                background-color: $white;
+            }
         }
         .cardRightCont {
             width: 65%;
@@ -43,6 +67,10 @@
             align-items: center;
             justify-content: center;
             background-color: $blue;
+            @include mq (600px) {
+                width: 90%;
+                margin-bottom: 24px;
+            }
             .cardText {
                 font-size: 14px;
                 font-weight: 300;
