--- a/src/components/mainSection/datavoiceSection/dataTitleParts/DataTitleParts.module.scss
+++ b/src/components/mainSection/datavoiceSection/dataTitleParts/DataTitleParts.module.scss
@@ -10,4 +10,10 @@
     padding: 8px 24px;
     display: inline-block;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, .3);
+    @include mq (460px) {
+        font-size: 20px;
+    }
+    @include mq (390px) {
+        font-size: 16px;
+    }
 }
