--- a/src/components/mainSection/datavoiceSection/graphData/GraphData.module.scss
+++ b/src/components/mainSection/datavoiceSection/graphData/GraphData.module.scss
@@ -7,4 +7,7 @@
     background-color: $white;
     border-radius: 5px;
     box-shadow: 10px -8px 0 0 rgba(149, 72, 1, 1);
+    @include mq (900px) {
+        margin: 32px 40px;
+    }
 }
