--- a/src/components/mainSection/datavoiceSection/voice/interview/interviewContents/InterviewContents.module.scss
+++ b/src/components/mainSection/datavoiceSection/voice/interview/interviewContents/InterviewContents.module.scss
@@ -3,10 +3,14 @@
 .interviewCont {
     border-radius: 5px;
     padding: 64px 0 32px;
+    @include mq (900px) {
+        margin: 0 32px;
+    }
     .qaCont {
         display: flex;
         flex-direction: column;
         align-items: center;
+        display: flex;
         .question {
             max-width: 540px;
             background-color: $cream;
@@ -17,14 +21,31 @@
             text-align: justify;
             font-size: 14px;
             box-shadow: 4px 4px 5px rgba(0, 0, 0, .3);
+            @include mq (760px) {
+                margin: 0 32px;
+            }
+            @include mq (460px) {
+                margin: 0 24px;
+            }
         }
         .answerCont {
             display: flex;
+            @include mq (760px) {
+                flex-direction: column;
+                padding: 0 32px;
+            }
+            @include mq (460px) {
+                padding: 0 24px;
+            }
             .answerName {
                 color: $orange;
                 font-weight: 700;
                 margin-top: 40px;
                 margin-right: 16px;
+                @include mq (760px) {
+                    text-align: center;
+                    margin-bottom: 16px;
+                }
             }
             .answer {
                 max-width: 540px;
@@ -38,7 +59,7 @@
             }
         }
         .line {
-            width: 640px;
+            width: 85%;
             height: 1px;
             background-color: $orange;
             margin: 48px 0;
