--- a/src/components/mainSection/flowSection/flowCard/FlowCard.module.scss
+++ b/src/components/mainSection/flowSection/flowCard/FlowCard.module.scss
@@ -5,4 +5,11 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 56px;
+    @include mq (900px) {
+        gap: 48px;
+        margin: 0 16px;
+    }
+    @include mq (560px) {
+        margin: 0 24px;
+    }
 }
