--- a/src/components/mainSection/pointSection/pointCard/eachPointCard/EachPointCard.module.scss
+++ b/src/components/mainSection/pointSection/pointCard/eachPointCard/EachPointCard.module.scss
@@ -9,6 +9,18 @@
     margin: 0 48px 24px;
     box-shadow: 10px -8px 0 0 rgba(149, 72, 1, 1);
     opacity: 0;
+    @include mq (740px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+        width: 90%;
+    }
+    .pointImg {
+        @include mq (360px) {
+            width: 100%;
+            height: auto;
+        }
+    }
     .pointTextCont {
         display: flex;
         flex-direction: column;
@@ -16,12 +28,18 @@
         justify-content: center;
         margin-left: 16px;
         background-color: $blue;
+        @include mq (740px) {
+            margin-left: 0;
+        }
         .pointTitle {
             background-color: $orange;
             border-radius: 5px;
             padding: 8px 24px;
             font-weight: 500;
             margin: 0 0 32px 16px;
+            @include mq (740px) {
+                margin: 0 0 32px 0;
+            }
         }
         .pointText {
             font-size: 14px;
@@ -29,6 +47,12 @@
             padding: 0 24px 0 40px;
             text-align: justify;
             background-color: $blue;
+            @include mq (800px) {
+                padding: 0 0 0 24px;
+            }
+            @include mq (740px) {
+                padding: 0;
+            }
         }
     }
 }
