--- a/src/components/Button/detailViewButton/DetailViewButton.module.scss
+++ b/src/components/Button/detailViewButton/DetailViewButton.module.scss
@@ -13,6 +13,9 @@
     cursor: pointer;
     margin-top: 16px;
     transition: transform 0.6s ease-out, box-shadow 0.6s ease-out; 
+    @include mq (360px) {
+        padding: 8px 24px;
+    }
     .btnArrow {
         display: inline-block;
         width: 8px;
