--- a/src/components/header/headertitle/HeaderTitle.module.scss
+++ b/src/components/header/headertitle/HeaderTitle.module.scss
@@ -3,29 +3,35 @@
 .headerTitleSec {
     padding: 48px 0 24px 24px;
     background-color: $blue;
-    @include mq (1350px) {
+    @include mq (1250px) {
+        padding: 48px 0 24px 16px;
+    }
+    @include mq (1200px) {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 24px 80px;
+        padding: 8px 80px;
         position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
         z-index: 20;
     }
-    @include mq (540px) {
-        padding: 24px;
+    @include mq (500px) {
+        padding: 8px 24px;
     }
     .headerTitleLink {
         background-color: $blue;
+        width: 70%;
+        cursor: pointer;
         .headerTitle {
             background-color: $blue;
+            margin-top: 8px;
         }
     }
     .naviOpenCont {
         display: none;
-        @include mq (1350px) {
+        @include mq (1200px) {
             display: block;
             background-color: $blue;
             margin-top: 4px;
@@ -39,6 +45,10 @@
                 background-color: $white;
                 margin-bottom: 8px;
                 transition: transform 0.6s ease-in, opacity 0.6s ease-in;
+                @include mq (460px) {
+                    width: 28px;
+                    height: 2px;
+                }
             }
             .naviCloseLine1 {
                 display: block;
@@ -52,6 +62,11 @@
                 top: 13px;
                 right: 4px;
                 transition: transform 0.6s ease-in, opacity 0.6s ease-in;
+                @include mq (460px) {
+                    top: 12px;
+                    width: 28px;
+                    height: 2px;
+                }
             }
             .naviCloseLine2 {
                 display: block;
@@ -64,14 +79,25 @@
                 top: 25px;
                 right: 4px;
                 transition: transform 0.6s ease-in, opacity 0.6s ease-in; 
+                @include mq (460px) {
+                    top: 24px;
+                    width: 28px;
+                    height: 2px;
+                }
             }
+        }
+        @include mq (460px) {
+            margin-top: 10px;
         }
     }
     .open {
         width: 40px;
         height: 40px;
-        margin-bottom: 8px;
         background-color: $orange;
         border-radius: 5px;
+        @include mq (460px) {
+            width: 36px;
+            height: 36px;
+        }
     }
 }
