--- a/src/components/mainSection/contactSection/contactTitleParts/ContactTitleParts.module.scss
+++ b/src/components/mainSection/contactSection/contactTitleParts/ContactTitleParts.module.scss
@@ -8,4 +8,11 @@
     padding: 16px 24px;
     border-radius: 5px;
     box-shadow:  4px 4px 4px rgba(0, 0, 0, .3);
+    margin-left: 40px;
+    @include mq (440px) {
+        margin-left: 24px;
+    }
+    @include mq (360px) {
+        margin-left: 16px;
+    }
 }
