--- a/src/components/mainSection/contactSection/formSection/FormSection.module.scss
+++ b/src/components/mainSection/contactSection/formSection/FormSection.module.scss
@@ -5,7 +5,18 @@
     border-radius: 5px;
     border: solid 1px $blue;
     padding: 40px 56px;
-    margin: 24px 0 80px;
+    margin: 24px 40px 80px;
+    @include mq (540px) {
+        padding: 40px;
+    }
+    @include mq (440px) {
+        padding: 40px 24px;
+        margin: 24px 24px 80px;
+    }
+    @include mq (360px) {
+        padding: 40px 16px;
+        margin: 24px 16px 80px;
+    }
     .formCont {
         background-color: $cream;
         display: flex;
@@ -36,6 +47,17 @@
                     font-weight: 600;
                     font-size: 12px;
                     margin-left: 8px;
+                }
+            }
+            .labelTextarea {
+                background-color: $cream;
+                .labelText2 {
+                    font-size: 14px;
+                    background-color: $cream;
+                }
+                @include mq (460px) {
+                    display: flex;
+                    flex-direction: column;
                 }
             }
             .input {
@@ -74,6 +96,9 @@
         .pripoliCont {
             background-color: $cream;
             text-align: center;
+            @include mq (630px) {
+                text-align: left;
+            }
             .pripoliClick {
                 border: none;
                 background-color: transparent;
@@ -105,6 +130,13 @@
             &:hover {
                 box-shadow: 0 0 0 $ornage-shadow; 
                 transform: translate(4px, -2px);  
+            }
+            @include mq (550px) {
+                font-size: 14px;
+                padding: 16px;
+            }
+            @include mq (380px) {
+                font-size: 12px;
             }
         }
     }
