--- a/src/components/mainSection/datavoiceSection/voice/comment/eachcomment/EachComment.module.scss
+++ b/src/components/mainSection/datavoiceSection/voice/comment/eachcomment/EachComment.module.scss
@@ -38,7 +38,7 @@
         }
     }
     .line {
-        width: 15vw;
+        width: 100%;
         height: 1px;
         background-color: $white;
         display: inline-block;
@@ -49,5 +49,14 @@
         font-size: 14px;
         font-weight: 300;
         padding: 0 16px;
+        @include mq (760px) {
+            padding: 0;
+        }
+        @include mq (560px) {
+            padding: 0 16px;
+        }
+        @include mq (400px) {
+            padding: 0;
+        }
     }
 }
