--- a/src/components/mainSection/flowSection/flowCard/FlowCard.module.scss
+++ b/src/components/mainSection/flowSection/flowCard/FlowCard.module.scss
@@ -4,12 +4,17 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    gap: 56px;
+    gap: 48px;
     @include mq (900px) {
         gap: 48px;
-        margin: 0 16px;
+        margin: 0 40px;
     }
-    @include mq (560px) {
+    @include mq (608px) {
         margin: 0 24px;
+        gap: 24px;
+    }
+    @include mq (551px) {
+        margin: 0 24px;
+        gap: 40px;
     }
 }
