--- a/src/components/mainSection/flowSection/flowCard/eachrowflowcard/EachRowFlowCard.module.scss
+++ b/src/components/mainSection/flowSection/flowCard/eachrowflowcard/EachRowFlowCard.module.scss
@@ -8,6 +8,7 @@
     border-radius: 5px;
     box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, .5);
     opacity: 0;
+    padding: 16px 0 0;
     .flowListImg {
         margin: 16px 0;
     }
@@ -32,11 +33,11 @@
         @include mq (620px) {
             padding: 16px 24px 24px;
         }
-        @include mq (560px) {
-            padding: 16px 64px 24px;
+        @include mq (551px) {
+            padding: 16px 80px 24px;
         }
         @include mq (400px) {
-            padding: 16px 32px 24px;
+            padding: 16px 40px 24px;
         }
         .flowListText {
             font-size: 14px;
