--- a/src/components/modal/privacyPolicy/PrivacyPolicy.module.scss
+++ b/src/components/modal/privacyPolicy/PrivacyPolicy.module.scss
@@ -11,20 +11,29 @@
     position: fixed;
     top: 0%;
     left: 0%;
-    z-index: 5;
+    z-index: 30;
 }
 
 .modalSectionShow {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     max-width: 568px;
     width: 50%;
+    max-height: 75vh;
     margin: 0 auto;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 50;
     border-radius: 5px;
+    @include mq (960px) {
+        width: 70%;
+    }
+    @include mq (600px) {
+        width: 90%;
+    }
     .modalTitle {
         background-color: $blue;
         color: $white;
@@ -35,7 +44,7 @@
     }
     .closeBtnCont {
         text-align: center;
-        padding-bottom: 40px;
+        padding: 40px 0;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
     }
