--- a/src/components/mainSection/datavoiceSection/voice/interview/Interview.module.scss
+++ b/src/components/mainSection/datavoiceSection/voice/interview/Interview.module.scss
@@ -71,6 +71,7 @@
         display: block;
         background-color: $blue;
         padding-bottom: 64px;
+        outline: 2px solid $blue;
     }
 }
 
