--- a/src/components/header/navi/Navi.module.scss
+++ b/src/components/header/navi/Navi.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    background-color: $blue;
     @include mq (1200px) {
         position: fixed;
         top: -200vh;
@@ -27,6 +28,7 @@
             transition: height 0.5s ease;
             height: 100vh;
             overflow-y: auto;
+            margin-bottom: 40px;
             &::-webkit-scrollbar {
                 background: $cream;
                 width: 6px;
@@ -63,7 +65,10 @@
             color: $black;
             background-color: transparent;
             padding: 16px;
-            font-size: 14px;
+            font-size: 16px;
+            @include mq (1350px) {
+                font-size: 14px;
+            }
         }
     }
 }
