--- a/src/components/mainSection/datavoiceSection/voice/comment/eachcomment/EachComment.module.scss
+++ b/src/components/mainSection/datavoiceSection/voice/comment/eachcomment/EachComment.module.scss
@@ -7,6 +7,7 @@
     gap: 24px;
     background-color: $cream;
     opacity: 0;
+    outline: solid 2px $cream;
     .commentListBox {
         background-color: $blue;
         border-radius: 5px;
