--- a/src/components/mainSection/topSection/TopSection.module.scss
+++ b/src/components/mainSection/topSection/TopSection.module.scss
@@ -2,6 +2,7 @@
 
 .topSection {
     background-color: $cream;
+    opacity: 0;
     @include mq (1200px) {
         padding-top: 61px;
     }
@@ -30,7 +31,7 @@
                 @include mq (550px) {
                     font-size: 18px;
                 }
-                @include mq (375px) {
+                @include mq (380px) {
                     font-size: 16px;
                 }
             }
@@ -38,8 +39,8 @@
                 background-color: $blue;
                 display: inline-block;
                 padding: 8px 48px;
-                border-top-right-radius: 0;
-                border-bottom-right-radius: 0;
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
                 margin-bottom: 32px;
                 @include mq (960px) {
                     width: 100%;
@@ -80,12 +81,13 @@
         }
     }
     .descriptionCont {
-        margin-top: 32px;
+        padding: 32px 0 8px;
         background-color: $cream;
         opacity: 0;
         height: auto;
+        outline: solid $cream;
         @include mq (550px) {
-            margin-top: 8px;
+            padding: 8px 0 0;
         }
         .description {
             color: $orange;
@@ -119,7 +121,7 @@
                     padding: 8px 16px;
                     font-size: 28px;
                 }
-                @include mq (360px) {
+                @include mq (380px) {
                     padding: 8px 16px;
                     font-size: 20px;
                 }
@@ -147,7 +149,7 @@
                     font-size: 24px;
                 }
                 @include mq (400px) {
-                    font-size: 22px;
+                    font-size: 20px;
                 }
             }
         }
