--- a/src/components/modal/companyInfo/CompanyInfoModal.module.scss
+++ b/src/components/modal/companyInfo/CompanyInfoModal.module.scss
@@ -11,20 +11,30 @@
     position: fixed;
     top: 0%;
     left: 0%;
-    z-index: 5;
+    z-index: 30;
 }
 
 .modalSectionShow {
-    display: block;
-    max-width: 800px;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 600px;
+    max-height: 80vh;
+    width: 60%;
     margin: 0 auto;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 50;
     border-radius: 5px;
+    @include mq (960px) {
+        width: 70%;
+    }
+    @include mq (780px) {
+        width: 90%;
+    }
     .modalTitle {
         background-color: $blue;
         color: $white;
@@ -32,10 +42,11 @@
         padding: 4px 0;
         border-top-right-radius: 5px;
         border-top-left-radius: 5px;
+        width: 100%;
     }
     .closeBtnCont {
         text-align: center;
-        padding-bottom: 40px;
+        margin-bottom: 40px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
     }
