--- a/src/components/modal/companyInfo/companyInfoContents/CompanyInfoContents.module.scss
+++ b/src/components/modal/companyInfo/companyInfoContents/CompanyInfoContents.module.scss
@@ -4,11 +4,16 @@
     color: $black;
     font-size: 14px;
     max-width: 568px;
-    margin: 80px auto 40px;
-    max-height: 520px;
+    margin: 64px 16px 40px;
+    max-height: 60vh;
     overflow-y: scroll;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     text-align: left;
+    padding: 0 24px;
+    @include mq (540px) {
+        padding: 0;
+    }
     &::-webkit-scrollbar {
         background: $cream;
         width: 6px;
@@ -24,7 +29,7 @@
     display: flex;
     padding: 16px 0;
     flex-wrap: wrap;
-    margin: 0 10% 24px;
+    margin: 0 5% 24px;
 }
 
 .companyInfoCont dt {
