--- a/src/components/modal/submit/SubmitModal.module.scss
+++ b/src/components/modal/submit/SubmitModal.module.scss
@@ -11,20 +11,29 @@
     position: fixed;
     top: 0%;
     left: 0%;
-    z-index: 5;
+    z-index: 30;
 }
 
 .modalSectionShow {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     max-width: 480px;
     width: 50%;
+    max-height: 50vh;
     margin: 0 auto;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 50;
     border-radius: 5px;
+    @include mq (960px) {
+        width: 70%;
+    }
+    @include mq (650px) {
+        width: 90%;
+    }
     .modalTitle {
         background-color: $blue;
         color: $white;
@@ -45,6 +54,9 @@
             padding: 24px 40px 40px;
             font-size: 14px;
             letter-spacing: .1em;
+            @include mq (420px) {
+                padding: 24px 24px;
+            }
         }
     }
     .closeBtnCont {
