--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -17,6 +17,7 @@ $ornage-shadow: #954801;
 /*section style*/
 .section {
     padding: 80px 0;
+    opacity: 0;
     @include mq (400px) {
       padding: 40px 0;
     }
@@ -145,7 +146,7 @@ $ornage-shadow: #954801;
 
 /*inview pointSection opacity*/
 .adjustOpacity {
-    animation: adjustOpacity 2.5s ease-in forwards;
+    animation: adjustOpacity 0.4s ease-in forwards;
   }
   
   @keyframes adjustOpacity {
