--- a/src/components/header/navi/Navi.module.scss
+++ b/src/components/header/navi/Navi.module.scss
@@ -7,16 +7,16 @@
     background-color: $blue;
     @include mq (1200px) {
         position: fixed;
-        top: -200vh;
+        top: 0;
         left: 0;
         width: 100vw;
         height: 100vh;
-        transition: top 0.5s ease;
+        transform: translateY(-100%);
+        transition: transform 0.5s ease-out;
         z-index: 10;
     }
     &.open {
-        top: 60px;
-        will-change: top;
+        transform: translateY(60px);
     }
     .naviList {
         list-style: none;
