--- a/src/components/mainSection/datavoiceSection/voice/interview/interviewPointParts/InterviewPointParts.module.scss
+++ b/src/components/mainSection/datavoiceSection/voice/interview/interviewPointParts/InterviewPointParts.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../../styles/common";
+@use "../../../../../../../styles/common";
 
 .pointText {
     background-color: $orange;
