--- a/src/components/mainSection/datavoiceSection/voice/interview/interviewContents/InterviewContents.module.scss
+++ b/src/components/mainSection/datavoiceSection/voice/interview/interviewContents/InterviewContents.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../../../../styles/common";
+@use "../../../../../../../styles/common" as *;
 
 .interviewCont {
     border-radius: 5px;
