--- a/src/components/mainSection/datavoiceSection/graphCard/graphTitleParts/GraphTitleParts.module.scss
+++ b/src/components/mainSection/datavoiceSection/graphCard/graphTitleParts/GraphTitleParts.module.scss
@@ -1,4 +1,4 @@
-@use "../../../../../../styles/common";
+@use "../../../../../../styles/common" as *;
 
 .graphTitle {
     background-color: $orange;
