--- a/src/components/mainSection/contactSection/formSection/FormSection.module.scss
+++ b/src/components/mainSection/contactSection/formSection/FormSection.module.scss
@@ -47,6 +47,7 @@
                     font-weight: 600;
                     font-size: 12px;
                     margin-left: 8px;
+                    background-color: $white;
                 }
             }
             .labelTextarea {
