--- a/src/components/modal/submit/SubmitModal.module.scss
+++ b/src/components/modal/submit/SubmitModal.module.scss
@@ -28,6 +28,7 @@
     transform: translate(-50%, -50%);
     z-index: 50;
     border-radius: 5px;
+    background-color: $white;
     @include mq (960px) {
         width: 70%;
     }
